[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "effectpy"
version = "0.2.0"
description = "Effect/ZIO-inspired structured async for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.12.15", "anyio>=4.10.0"]

[project.optional-dependencies]
anyio = ["anyio>=4.0"]
exporters = ["aiohttp>=3.8"]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "mkdocs-autorefs>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["effectpy"]

[tool.hatch.build.targets.sdist]
include = ["effectpy", "examples", "README.md", "pyproject.toml"]
